@@ -62,8 +62,6 @@
 - a confirm-before command which asks "Are you sure? (y/n)" before executing
   command, eg bind-key "&" confirm-before "kill-window"
 - clear window title on exit
-- better support for stupid margin terminals. strcmp for cons25 sucks, how can
-  these be autodetected?
 - refer to windows by name etc (duplicates? fnmatch?)
 - the output code (tty.c) could do with optimisation depending on term
   capibilities
